--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
 <header>
   <div class="container">
-    <a routerLink="/" class="logo"> {{ appTitle }}</a>
+    <a routerLink="/" class="logo">
+      <img src="./img/logo.jpg">
+    </a>
     <nav>
       <ul>
         <li><a routerLink="/">Home</a></li>
