Made some changes to the styling of the text boxes and the inputs

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
-    <a routerLink="/" class="logo">
-      <img src="./img/logo.jpg">
+    <a routerLink="/" class="logo"> {{ appTitle }}
+      <img src="{{ logoImg }}">
     </a>
     <nav>
       <ul>
