--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -2,17 +2,15 @@
   <h4 class="text-center">To Do</h4>
 </div>
 
-<div class="jumbotron" style="padding: 7px 0px; margin-bottom: 0;">
-  <h4 class="text-center">Add a todo here</h4>
-</div>
 <div class="input-group">
   <input type="text" class="form-control" #itemTitle>
-  <div class="input-group-addon hover-cursor" (click)="onAdd(itemTitle)">
+  <div class="input-group-addon hover-cursor" style="border-top-right-radius: 30px; border-bottom-right-radius: 30px;"
+    (click)="onAdd(itemTitle)">
     <i class="fa fa-plus-circle fa-2x"></i>
   </div>
 </div>
 
-<div style="margin: 5px 0px">
+<div class="todoList">
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let item of toDoListArray">
       <span class="hover-cursor" [class.text-succes]="item.isChecked">
