--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -13,11 +13,11 @@
 <div class="todoList">
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let item of toDoListArray">
-      <span class="hover-cursor" [class.text-succes]="item.isChecked">
+      <span class="hover-cursor" [class.text-succes]="item.isChecked" (click)="alterCheck(item.$key, item.isChecked)">
         <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
       </span>
       {{item.title}}
-      <span class="hover-cursor text-danger pull-right">
+      <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
         <i class="fa fa-trash-o fa-lg"></i>
       </span>
     </li>
