Made some changes to the todolist

--- a/src/app/todo/todo.component.scss
+++ b/src/app/todo/todo.component.scss
@@ -1,5 +1,5 @@
 .form-control {
-  border-radius: 30px;
+  border-top-left-radius: 30px;
 }
 
 .jumbotron {
@@ -9,3 +9,4 @@
 .todoList {
   margin: 5px 0px;
 }
+
