Made changes to the navbar and the inputs and added a login and register

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -4,8 +4,7 @@
 
 <div class="input-group">
   <input type="text" class="form-control" #itemTitle>
-  <div class="input-group-addon hover-cursor" style="border-top-right-radius: 30px; border-bottom-right-radius: 30px;"
-    (click)="onAdd(itemTitle)">
+  <div class="input-group-addon hover-cursor" (click)="onAdd(itemTitle)">
     <i class="fa fa-plus-circle fa-2x"></i>
   </div>
 </div>
