--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,13 +1,40 @@
 <header>
-  <div class="container">
-    <a routerLink="/" class="logo"> {{ appTitle }}
-      <img src="{{ logoImg }}">
-    </a>
-    <nav>
-      <ul>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand">{{ appTitle }}</a>
+        <img src="{{ logoImg }}">
+      </div>
+      <ul class="nav navbar-nav">
         <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/todo">Todo</a></li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Page 1-1</a></li>
+            <li><a href="#">Page 1-2</a></li>
+            <li><a href="#">Page 1-3</a></li>
+          </ul>
+        </li>
+        <li><a href="/todo">Todo</a></li>
       </ul>
-    </nav>
-  </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <!-- <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-log-in"></span>
+            Login
+
+          </a>
+          <div class="dropdown-menu p-3">
+            <form class="form-horizontal" method="post" accept-charset="UTF-8">
+              <input class="form-control login" type="text" name="username2" placeholder="Username">
+              <input class="form-control login" type="text" name="password2" placeholder="Password">
+              <input class="btn btn-primary" type="button" name="submit" value="Login">
+            </form>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
