--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,16 +1,29 @@
 $main-color: lightgray;
 $hover-color: gray;
-$font-color: black;
+$text-color: black;
 
 header {
-  background: $main-color;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
+  .navbar {
+    border-radius: 30px;
+  }
 
-  .logo {
-    color: $font-color;
+  .navbar-inverse {
+    background-color: $main-color;
+    border-color: $main-color;
+    border-radius: 30px;
+  }
+
+  .navbar-brand {
+    color: $text-color;
+  }
+
+  .navbar-header {
+    margin-top: 6px;
 
     img {
+      margin-top: 16px;
+      margin-left: -10px;
+      margin-right: 10px;
       height: 18px;
       width: 29px;
     }
@@ -31,7 +44,7 @@ header {
           padding: 1.5em;
           text-transform: uppercase;
           font-size: .8em;
-          color: $font-color;
+          color: $text-color;
 
           &:hover {
             background: $hover-color;
@@ -39,6 +52,18 @@ header {
           }
         }
       }
+    }
+
+    .dropdown-toggle {
+      background-color: $main-color;
+    }
+
+    .login {
+      margin-bottom: 5px;
+    }
+
+    .dropdown-menu {
+      width: 300px !important;
     }
   }
 }
