Made some changes to the navbar

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -28,6 +28,7 @@
           </a>
           <div class="dropdown-menu p-3">
             <form class="form-horizontal" method="post" accept-charset="UTF-8">
+              <p class="form-title">Login here:</p>
               <input class="form-control login" type="text" name="username2" placeholder="Username">
               <input class="form-control login" type="text" name="password2" placeholder="Password">
               <input class="btn btn-primary" type="button" name="submit" value="Login">
