--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -18,7 +18,6 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <!-- <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -28,7 +27,7 @@
           </a>
           <div class="dropdown-menu p-3">
             <form class="form-horizontal" method="post" accept-charset="UTF-8">
-              <p class="form-title">Login here:</p>
+              <p class="form-title">Login</p>
               <input class="form-control login" type="text" name="username2" placeholder="Username">
               <input class="form-control login" type="text" name="password2" placeholder="Password">
               <input class="btn btn-primary" type="button" name="submit" value="Login">
