--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,8 +2,7 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand">{{ appTitle }}</a>
-        <img src="{{ logoImg }}">
+        <a class="navbar-brand"><span class="glyphicon glyphicon-globe"></span>{{ appTitle }}</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a routerLink="/">Home</a></li>
@@ -17,10 +16,28 @@
         <li><a href="/todo">Todo</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            <span class="glyphicon glyphicon-user"></span>
+            Register
+
+          </a>
+          <div class="dropdown-menu p-3">
+            <form class="form-horizontal" method="post" accept-charset="UTF-8">
+              <p class="form-title">Register</p>
+              <input class="form-control login" type="text" name="name2" placeholder="Name">
+              <input class="form-control login" type="email" name="email2" placeholder="Email">
+              <input class="form-control login" type="text" name="username2" placeholder="Username">
+              <input class="form-control login" type="password" name="password2" placeholder="Password">
+              <input class="btn btn-primary" type="button" name="submit" value="Login">
+            </form>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
             <span class="glyphicon glyphicon-log-in"></span>
             Login
 
