Added a other text to the register button

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -31,7 +31,7 @@
               <input class="form-control login" type="email" name="email2" placeholder="Email">
               <input class="form-control login" type="text" name="username2" placeholder="Username">
               <input class="form-control login" type="password" name="password2" placeholder="Password">
-              <input class="btn btn-primary" type="button" name="submit" value="Login">
+              <input class="btn btn-primary" type="button" name="submit" value="Register">
             </form>
           </div>
         </li>
