Made some changes to the site

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,19 @@
 <div class="jumbotron">
   <h4 class="text-center">Home</h4>
 </div>
+
+<div class="text-container">
+  <h2 class="text-title">This is me</h2>
+  <div class="full-bio">
+    <img src="../../assets/fotos/foto1.jpeg" class="text-image">
+    <p class="text-bio">
+      En mijn naam is Strale. Ik ben 19 jaar en ik woon in Rotterdam.
+      Mijn hobby's zijn gamen, tekenen, sporten en coderen.
+      Ik werk als een computerspecialist bij studentaanhuis ik verleen hulp aan oude mensen die niet overweg kunnen met computers.
+      Ook werk ik voor een logistiek bedrijf waarbij ik de inventarisatie doe voor producten die naar het leger of rode kruis gaan.
+      Voordat ik op het hbo kwam heb ik 3 jaar lang een niveau 4 mbo opleiding gedaan voor webdeveloper en die ook afgerond.
+      Ook heb ik een tijdje gewerkt bij een frontend bedrijf waar ik veel kennis heb opgedaan van zowel backend als frontend.
+      Mijn doel is om na deze opleiding nog een eventuele master te doen maar als dat niet lukt verder te gaan werken bij mijn oom die veel werkt met SAP.
+    </p>
+  </div>
+</div>
