--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,34 @@
+$main-color: lightgray;
+$hover-color: gray;
+$text-color: black;
+
 .jumbotron {
   padding: 7px 0px;
+}
+
+.text-container {
+  .text-title {
+    text-align: center;
+  }
+
+  .full-bio {
+    text-align: center;
+
+    .text-image {
+      border-radius: 360%;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      border: solid;
+      height: 300px;
+      width: 300px;
+    }
+
+    .text-bio {
+      background-color: $main-color;
+      padding: 20px;
+      border-radius: 50px;
+      word-wrap: break-word;
+    }
+  }
+
 }
