--- a/src/app/todo/todo.component.scss
+++ b/src/app/todo/todo.component.scss
@@ -1,10 +1,12 @@
 .form-control {
   border-radius: 30px;
   height: 45px;
+  border: solid;
 }
 
 .jumbotron {
   padding: 7px 0px;
+  border: solid;
 }
 
 .todoList {
@@ -14,4 +16,6 @@
 .input-group-addon {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
+  border: solid 2px;
+  border-left: 0;
 }
