Made some changes to the site

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
 <div class="banner">
   <p class="welkom">Welkom</p>
-  <p class="scroll">Scroll naar beneden voor de content</p>
+  <p class="scroll">Scroll naar beneden voor de content!</p>
 </div>
