--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="text-container">
-  <h2 class="text-title">This is me</h2>
+  <h2 class="text-title">Dit ben ik</h2>
   <div class="full-bio">
     <img src="../../assets/fotos/foto1.jpeg" class="text-image">
     <p class="text-bio">
